fix: remove all elements overflow

--- a/src/components/App/Body/Header/Header.module.scss
+++ b/src/components/App/Body/Header/Header.module.scss
@@ -1,6 +1,7 @@
 @use '../../../../styles/mixins';
 
 .Header {
+  min-height: auto;
   margin-bottom: var(--gap);
 
   @include mixins.width(1100px) {
