--- a/src/components/App/Menu/Links/Link/Link.module.scss
+++ b/src/components/App/Menu/Links/Link/Link.module.scss
@@ -1,7 +1,6 @@
 @use '../../../../../styles/mixins';
 
 .Link {
-  min-height: auto;
   border-radius: calc(var(--brr) * 1.2);
   padding: calc(var(--gap) * 2);
   gap: calc(var(--gap) * 2);
