--- a/src/components/controls/Scroller/Scroller.module.scss
+++ b/src/components/controls/Scroller/Scroller.module.scss
@@ -2,7 +2,6 @@
 
 .Scroller {
   position: relative;
-  min-height: 0;
   display: flex;
   flex-direction: column;
 }
