--- a/src/components/controls/buttons/Button/Button.module.scss
+++ b/src/components/controls/buttons/Button/Button.module.scss
@@ -1,6 +1,8 @@
 @use '../../../../styles/mixins';
 
 .Button {
+  min-width: auto;
+  min-height: auto;
   display: flex;
   align-items: stretch;
 
