--- a/src/components/pages/Tasks/List/Task/Task.module.scss
+++ b/src/components/pages/Tasks/List/Task/Task.module.scss
@@ -24,6 +24,7 @@
 }
 
 .actions {
+  min-width: auto;
   gap: calc(var(--gap) * 2);
 }
 
