--- a/src/components/ui/Gap/Gap.module.scss
+++ b/src/components/ui/Gap/Gap.module.scss
@@ -1,5 +1,4 @@
 .Gap {
-  min-height: 0;
   gap: var(--gap);
   display: flex;
 
