--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -69,7 +69,3 @@ input::placeholder, textarea::placeholder {
 svg * {
   transition-property: fill, stroke;
 }
-
-p {
-  min-width: 0;
-}
